# rdom-extensions

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  RDOM_SUBSTRATE_FINDINGS.md  README.md  STATE.md
examples/: dashboard.rs  interactive_chart.rs  live_chart.rs  timeseries_gallery.rs
src/: lib.rs  palette.rs
src/chart/: axis.rs  bar.rs  blocks.rs  braille.rs  data.rs  gauge.rs  mod.rs  sparkline.rs  time_series.rs
src/table/: mod.rs
tests/: render_bar_gauge.rs  render_dashboard.rs  render_interaction.rs  render_sparkline.rs  render_time_series.rs  render_ts_demos.rs  render_virtual_table.rs
