[package]
name = "rdom-charts"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Terminal charts for rdom — time-series, sparkline, bar, and gauge, braille/block-rasterized onto a <canvas>."
repository = "https://github.com/miskun/rdom-charts"
keywords = ["tui", "chart", "dataviz", "terminal", "braille"]
categories = ["command-line-interface", "visualization"]
readme = "README.md"
# Ship only the crate + its docs/examples/tests; keep internal design docs
# (STATE.md, RDOM_SUBSTRATE_FINDINGS.md, agent guides, toolchain pin) and any
# local tooling out of the published tarball.
include = [
    "src/**/*.rs",
    "examples/**/*.rs",
    "tests/**/*.rs",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]

[dependencies]
# Public rdom-tui surface only (canvas paint API, Color/Style, element
# builders, event listeners). No path dep, no private hooks.
rdom-tui = "0.3.14"  # 0.3.4+: focus tint is control-scoped, so a focused <canvas> stays transparent
